Added item ProgressFill

--- a/qml.qrc
+++ b/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>TextLineEdit.qml</file>
         <file>ProgressTimer.qml</file>
+        <file>ProgressFill.qml</file>
     </qresource>
 </RCC>
